force-app/main/default/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Article_Detail_Link__c</fullName>
        <formula>IF( 
CONTAINS($Api.Partner_Server_URL_390, &apos;visual&apos;), 
&apos;https://&apos;+ 
MID($Api.Partner_Server_URL_390, FIND( &apos;visual&apos;, $Api.Partner_Server_URL_390)-4,4) 
+&apos;salesforce.com/&apos;, 
LEFT($Api.Partner_Server_URL_390, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_390)) 
) + Article_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Detail Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Id__c</fullName>
        <label>Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Link__c</fullName>
        <formula>HYPERLINK( 
IF( 
CONTAINS($Api.Partner_Server_URL_260, &apos;visual&apos;), 
&apos;https://&apos;+ 
MID($Api.Partner_Server_URL_260, FIND( &apos;visual&apos;, $Api.Partner_Server_URL_260)-4,4) 
+&apos;salesforce.com/&apos;, 
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) 
) + Article_Id__c, &apos;Open Article&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>HR_FAQ__kav</fullName>
                    <label>HR FAQ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_URL__c</fullName>
        <label>Article URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys (Case)</relationshipLabel>
        <relationshipName>Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_One__c</fullName>
        <label>Category One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Two__c</fullName>
        <label>Category Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_365_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Chat 365 Log record</description>
        <label>Chat 365 Log</label>
        <referenceTo>Chat_365_Log__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chat_Bot__c</fullName>
        <description>Name of chat bot</description>
        <label>Chat Bot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Rating_with_MRO__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>MRO Customer Satisfaction Rating field.</description>
        <label>Customer Satisfaction Rating with MRO?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enquiry_Category_Level_1__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Enquiry Category Level 1 for MRO</description>
        <formula>TEXT(Enquiry__r.Category_Level_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enquiry Category Level 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Group__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Enquiry Group Field.</description>
        <formula>TEXT(Enquiry__r.Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enquiry Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Origin__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Enquiry Origin</description>
        <formula>TEXT(Enquiry__r.Origin)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enquiry Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Owner__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Enquiry Owner of the related case</description>
        <formula>Enquiry__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Enquiry__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enquiry Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Type__c</fullName>
        <formula>TEXT(Enquiry__r.Enquiry_Type__c)</formula>
        <label>Enquiry Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enquiry</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enquiry_owner_role__c</fullName>
        <description>Enquiry owner role at the time the survey is sent out.</description>
        <label>Enquiry owner role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_easy_was_it_for_you_answered_your_Q__c</fullName>
        <label>How easy was it for you answered your Q</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_times_did_you_need_to_contact__c</fullName>
        <label>How many times did you need to contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_satisfied__c</fullName>
        <label>How satisfied were you with the response</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_hours__c</fullName>
        <formula>( Status_Updated_Date__c  - Completion_Date__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time taken to change the status (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_information__c</fullName>
        <label>Do you have any specific feedback to be</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owning_Org_Unit__c</fullName>
        <label>Owning Org Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admissions Unit</fullName>
                </value>
                <value>
                    <fullName>Buildings and Property</fullName>
                </value>
                <value>
                    <fullName>Document Delivery</fullName>
                </value>
                <value>
                    <fullName>Employee Relations</fullName>
                </value>
                <value>
                    <fullName>Enrolments Unit</fullName>
                </value>
                <value>
                    <fullName>Examinations Unit</fullName>
                </value>
                <value>
                    <fullName>Graduations Unit</fullName>
                </value>
                <value>
                    <fullName>HR Services</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>ITS Client Services</fullName>
                </value>
                <value>
                    <fullName>Library Tier 1</fullName>
                </value>
                <value>
                    <fullName>Monash International</fullName>
                </value>
                <value>
                    <fullName>Policy and Consultancy</fullName>
                </value>
                <value>
                    <fullName>Research and Learning</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>Scholarships Unit</fullName>
                </value>
                <value>
                    <fullName>Service Centre</fullName>
                    <label>Monash Connect</label>
                </value>
                <value>
                    <fullName>Student Finance</fullName>
                </value>
                <value>
                    <fullName>System Administration Team</fullName>
                    <label>Monash Connect Communications</label>
                </value>
                <value>
                    <fullName>Timetable Unit</fullName>
                </value>
                <value>
                    <fullName>Workforce Policy &amp; Performance</fullName>
                </value>
                <value>
                    <fullName>Workplace Relations</fullName>
                </value>
                <value>
                    <fullName>Access HR</fullName>
                </value>
                <value>
                    <fullName>Employee Assistance</fullName>
                </value>
                <value>
                    <fullName>Ethical Conduct</fullName>
                </value>
                <value>
                    <fullName>Gender Equity</fullName>
                </value>
                <value>
                    <fullName>Leadership &amp; Organisational Development</fullName>
                </value>
                <value>
                    <fullName>Payroll Services</fullName>
                </value>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>Remuneration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_owned_by__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Used by Monash connect Team for Get Feedback process.</description>
        <label>Process owned by</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_Status__c</fullName>
        <label>QA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QA Not completed</fullName>
                </value>
                <value>
                    <fullName>QA In progress</fullName>
                </value>
                <value>
                    <fullName>QA Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_code__c</fullName>
        <label>Reason code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_for_follow_up_Situation_Task__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1a1. Staff provided incorrect or incomplete information</fullName>
                </value>
                <value>
                    <fullName>1a2. Staff provided broken or incorrect links</fullName>
                </value>
                <value>
                    <fullName>1a3. Staff provided conflicting information (didn&apos;t check enquiry history)</fullName>
                </value>
                <value>
                    <fullName>1b1. Staff failed to follow/investigate the correct process</fullName>
                </value>
                <value>
                    <fullName>1b2. Staff behaved inappropriately/was rude</fullName>
                </value>
                <value>
                    <fullName>1b3. Staff was not helpful</fullName>
                </value>
                <value>
                    <fullName>1c1. Untimely response - not sent from within required SLA of 8 business hrs</fullName>
                </value>
                <value>
                    <fullName>1c2. Delayed response - not sent within required SLA of 8 business hrs - due to waiting on another department/faculty</fullName>
                </value>
                <value>
                    <fullName>1c3. No response provided at all</fullName>
                </value>
                <value>
                    <fullName>1d. Website was incorrect / not updated / conflicted with another website</fullName>
                </value>
                <value>
                    <fullName>1e. Monash system/process fail</fullName>
                </value>
                <value>
                    <fullName>2a. Customer expectations could not be met</fullName>
                </value>
                <value>
                    <fullName>2b. Customer was unaware/mistaken</fullName>
                </value>
                <value>
                    <fullName>2c. Customer did not provide reason for lower score</fullName>
                </value>
                <value>
                    <fullName>1a. Staff provided incorrect information (includes broken links in emails)</fullName>
                    <isActive>false</isActive>
                    <label>1a. Staff provided incorrect information (includes broken links in emails)</label>
                </value>
                <value>
                    <fullName>1b. Staff have failed to follow correct process (includes inappropriate behaviour)</fullName>
                    <isActive>false</isActive>
                    <label>1b. Staff have failed to follow correct process (includes inappropriate behaviour)</label>
                </value>
                <value>
                    <fullName>1c. Untimely, delayed or no response (our KPI is 8 business hrs)</fullName>
                    <isActive>false</isActive>
                    <label>1c. Untimely, delayed or no response (our KPI is 8 business hrs)</label>
                </value>
                <value>
                    <fullName>1d. Website incorrect/not up to date</fullName>
                    <isActive>false</isActive>
                    <label>1d. Website incorrect/not up to date</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Dissatisfaction__c</fullName>
        <label>Reason for Dissatisfaction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_follow_up_Situation_Task__c</fullName>
        <label>Reason for follow up (Situation/Task)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Monash failed to meet an obligation</fullName>
                </value>
                <value>
                    <fullName>2. Monash met all obligations</fullName>
                </value>
                <value>
                    <fullName>3. Monash exceeded expectations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Changes to true when the Feedback status changes from Feedback Received to some other status</description>
        <label>Status Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Updated_Date__c</fullName>
        <description>To get the time stamp of when the Feedback Status was updated from Feedback Received to some other status</description>
        <label>Status Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Feedback Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Solved</fullName>
                </value>
                <value>
                    <fullName>Pending Investigation</fullName>
                </value>
                <value>
                    <fullName>Feedback for QA</fullName>
                    <isActive>false</isActive>
                    <label>Feedback for QA</label>
                </value>
                <value>
                    <fullName>Feedback received</fullName>
                    <isActive>false</isActive>
                    <label>Feedback received</label>
                </value>
                <value>
                    <fullName>Feedback reviewed - Action req</fullName>
                    <isActive>false</isActive>
                    <label>Feedback reviewed - Action req</label>
                </value>
                <value>
                    <fullName>Feedback reviewed - No action req</fullName>
                    <isActive>false</isActive>
                    <label>Feedback reviewed - No action req</label>
                </value>
                <value>
                    <fullName>Survey sent</fullName>
                    <isActive>false</isActive>
                    <label>Survey sent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_this_article_helpful__c</fullName>
        <label>Was this article helpful?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_this_the_first_time_you_contacted_MC__c</fullName>
        <label>Was this the first time you contacted us</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_your_questions_answered__c</fullName>
        <label>Were your questions answered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_could_we_have_done_differently_to_i__c</fullName>
        <label>What could we have done differently</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Would_you_like_to_be_contacted_about_FB__c</fullName>
        <label>Would you like to be contacted about FB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Would_you_recommend_Monash_Connect__c</fullName>
        <label>How likely are you to recommend Monash C</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>Arts_Open_feedback</fullName>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Enquiry__c</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Were_your_questions_answered__c</columns>
        <columns>Was_this_the_first_time_you_contacted_MC__c</columns>
        <columns>How_many_times_did_you_need_to_contact__c</columns>
        <columns>How_easy_was_it_for_you_answered_your_Q__c</columns>
        <columns>How_satisfied__c</columns>
        <columns>What_could_we_have_done_differently_to_i__c</columns>
        <columns>Would_you_like_to_be_contacted_about_FB__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.Surveys</value>
        </filters>
        <filters>
            <field>Enquiry_Type__c</field>
            <operation>equals</operation>
            <value>Current Course,Future Course,Non Course,Past Course</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Enquiry_owner_role__c</field>
            <operation>contains</operation>
            <value>Arts</value>
        </filters>
        <label>Arts - Open feedback</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Arts</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arts_Pending_Investigation_feedback</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Enquiry__c</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Were_your_questions_answered__c</columns>
        <columns>Was_this_the_first_time_you_contacted_MC__c</columns>
        <columns>How_many_times_did_you_need_to_contact__c</columns>
        <columns>How_easy_was_it_for_you_answered_your_Q__c</columns>
        <columns>How_satisfied__c</columns>
        <columns>What_could_we_have_done_differently_to_i__c</columns>
        <columns>Would_you_like_to_be_contacted_about_FB__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.Surveys</value>
        </filters>
        <filters>
            <field>Enquiry_Type__c</field>
            <operation>equals</operation>
            <value>Current Course,Future Course,Non Course,Past Course</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Investigation</value>
        </filters>
        <filters>
            <field>Enquiry_owner_role__c</field>
            <operation>contains</operation>
            <value>Arts</value>
        </filters>
        <label>Arts - Pending Investigation feedback</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Arts</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arts_Solved_feedback</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Enquiry__c</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Were_your_questions_answered__c</columns>
        <columns>Was_this_the_first_time_you_contacted_MC__c</columns>
        <columns>How_many_times_did_you_need_to_contact__c</columns>
        <columns>How_easy_was_it_for_you_answered_your_Q__c</columns>
        <columns>How_satisfied__c</columns>
        <columns>What_could_we_have_done_differently_to_i__c</columns>
        <columns>Would_you_like_to_be_contacted_about_FB__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.Surveys</value>
        </filters>
        <filters>
            <field>Enquiry_Type__c</field>
            <operation>equals</operation>
            <value>Current Course,Future Course,Non Course,Past Course</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Solved</value>
        </filters>
        <filters>
            <field>Enquiry_owner_role__c</field>
            <operation>contains</operation>
            <value>Arts</value>
        </filters>
        <label>Arts - Solved feedback</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Arts</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusEco_Open_feedback</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Enquiry__c</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Were_your_questions_answered__c</columns>
        <columns>Was_this_the_first_time_you_contacted_MC__c</columns>
        <columns>How_many_times_did_you_need_to_contact__c</columns>
        <columns>How_easy_was_it_for_you_answered_your_Q__c</columns>
        <columns>How_satisfied__c</columns>
        <columns>What_could_we_have_done_differently_to_i__c</columns>
        <columns>Would_you_like_to_be_contacted_about_FB__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.Surveys</value>
        </filters>
        <filters>
            <field>Enquiry_Type__c</field>
            <operation>equals</operation>
            <value>Current Course,Future Course,Non Course,Past Course</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Enquiry_owner_role__c</field>
            <operation>contains</operation>
            <value>Business and Economics</value>
        </filters>
        <label>BusEco - Open feedback</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Business_and_Economics</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusEco_Pending_Investigation_feedback</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Enquiry__c</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Were_your_questions_answered__c</columns>
        <columns>Was_this_the_first_time_you_contacted_MC__c</columns>
        <columns>How_many_times_did_you_need_to_contact__c</columns>
        <columns>How_easy_was_it_for_you_answered_your_Q__c</columns>
        <columns>How_satisfied__c</columns>
        <columns>What_could_we_have_done_differently_to_i__c</columns>
        <columns>Would_you_like_to_be_contacted_about_FB__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.Surveys</value>
        </filters>
        <filters>
            <field>Enquiry_Type__c</field>
            <operation>equals</operation>
            <value>Current Course,Future Course,Non Course,Past Course</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Investigation</value>
        </filters>
        <filters>
            <field>Enquiry_owner_role__c</field>
            <operation>contains</operation>
            <value>Business and Economics</value>
        </filters>
        <label>BusEco - Pending Investigation feedback</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Business_and_Economics</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusEco_Solved_feedback</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Enquiry__c</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Were_your_questions_answered__c</columns>
        <columns>Was_this_the_first_time_you_contacted_MC__c</columns>
        <columns>How_many_times_did_you_need_to_contact__c</columns>
        <columns>How_easy_was_it_for_you_answered_your_Q__c</columns>
        <columns>How_satisfied__c</columns>
        <columns>What_could_we_have_done_differently_to_i__c</columns>
        <columns>Would_you_like_to_be_contacted_about_FB__c</columns>
        <columns>Enquiry_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.Surveys</value>
        </filters>
        <filters>
            <field>Enquiry_Type__c</field>
            <operation>equals</operation>
            <value>Current Course,Future Course,Non Course,Past Course</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Solved</value>
        </filters>
        <filters>
            <field>Enquiry_owner_role__c</field>
            <operation>contains</operation>
            <value>Business and Economics</value>
        </filters>
        <label>BusEco - Solved feedback</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Business_and_Economics</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ChatBot_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Enquiry__c</columns>
        <columns>Comments__c</columns>
        <columns>How_satisfied__c</columns>
        <columns>Chat_Bot__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Chat_Bot__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>ChatBot Feedback</label>
        <sharedTo>
            <role>Monash_Connect_Leader</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Copy_of_Solved_feedback</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Enquiry__c</columns>
        <columns>Enquiry_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Were_your_questions_answered__c</columns>
        <columns>Was_this_the_first_time_you_contacted_MC__c</columns>
        <columns>How_many_times_did_you_need_to_contact__c</columns>
        <columns>How_easy_was_it_for_you_answered_your_Q__c</columns>
        <columns>How_satisfied__c</columns>
        <columns>What_could_we_have_done_differently_to_i__c</columns>
        <columns>Would_you_like_to_be_contacted_about_FB__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Survey__c.Surveys</value>
        </filters>
        <filters>
            <field>Enquiry_Type__c</field>
            <operation>equals</operation>
            <value>Current Course,Future Course,Non Course,Past Course</value>
        </filters>
        <filters>
            <field>Completion_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/26/2019 12:00 AM</value>
        </filters>
        <label>4. All Feedback - Last 30 Days</label>
        <sharedTo>
            <role>Monash_Connect</role>
        </sharedTo>
    </listViews>
</CustomObject>